# AaCA-rgr

./: CMakeLists.txt  build_proj.sh  input.txt  run_test.sh
main/: CMakeLists.txt  main.c  main.c~  main.h  main.h~
modules/: CMakeLists.txt  collections.c~  collections.h~  deque.c  deque.c~  deque.h  deque.h~  heap.c  heap.c~  heap.h  heap.h~  queue.c~  queue.h~  vector.c  vector.c~  vector.h  vector.h~
tests/: CMakeLists.txt
tests/broken_test/: CMakeLists.txt  meant_to_be_fine.c  meant_to_fail.c
tests/test_deque/: CMakeLists.txt  suite_1.c  suite_1.c~
tests/test_heap/: CMakeLists.txt  suite_1.c  suite_1.c~
tests/test_vector/: CMakeLists.txt  suite_1.c  suite_1.c~  suite_lexic_sort.c  suite_lexic_sort.c~  suite_pyramid_sort.c  suite_pyramid_sort.c~
